@@ -29,8 +29,6 @@ CHROUST
 - moznost pouze aktualizovat soubory - beze zmen ref-id aby bylo mozne 
   bezbolestne aktualizovat indicie v prubehu souteze. Pravdepodobne pri tom neni 
   potreba vubec menit DB ??
-- verbose/debug prepinac - pri zapnuti vypisovat nactena metadata pro jednotlive adresare apod...
-- kontrolovat ze je spravne oznacena startovni/cilova indicie a ze existuje cesta start->cil
 
 
 
